# sync-committee-rs

./: README.md
.github/workflows/: test.yml
primitives/: Cargo.toml
primitives/src/: consensus_types.rs  constants.rs  derived_types.rs  helpers.rs  lib.rs  types.rs  util.rs
primitives/src/ssz/: byte_vector.rs
prover/: Cargo.toml
prover/src/: lib.rs  test.rs
prover/src/responses/: beacon_block_response.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  signature_verification.rs
