[package]
name = "sync-committee-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs"]

[dependencies]
base2 = { version="0.2.2", default-features = false }
sync-committee-primitives = { path= "../primitives", default-features = false }
ethereum-consensus = { git = "https://github.com/polytope-labs/ethereum-consensus", rev = "d3fe0ad76613b52cdfbdea7c317ecdc35f271e4f", default-features = false }
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch="dami/scale-codec", default-features = false, features = ["codec"] }
milagro_bls = { git = "https://github.com/sigp/milagro_bls", default-features = false }
log = { version = "0.4.17", default-features = false }

[features]
default = ["std"]
std = [
    "ssz-rs/std",
    "milagro_bls/std",
    "log/std"
]
testing = ["sync-committee-primitives/testing"]
