[package]
name = "sync-committee-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs"]

[dependencies]
sync-committee-primitives = { path= "../primitives", default-features = false }
ssz-rs = { git = "https://github.com/polytope-labs/ssz-rs", branch = "dami/encode-decode" , default-features = false }
log = { version = "0.4.17", default-features = false }

[features]
default = ["std"]
std = [
    "ssz-rs/std",
    "log/std"
]
testnet = ["sync-committee-primitives/testnet"]
mainnet = ["sync-committee-primitives/mainnet"]
